--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,8 @@
-<app-task1></app-task1>
-<app-task2></app-task2>
-<app-task4></app-task4>
+<mat-grid-list cols="3" rowHeight="2:3">
+    <mat-grid-tile><app-task1></app-task1></mat-grid-tile>
+    <mat-grid-tile><app-task2></app-task2></mat-grid-tile>
+    <mat-grid-tile><app-task4></app-task4></mat-grid-tile>
+
+</mat-grid-list>
+
+
